--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Exercise02</string>
-    <string name="leftbtn_key">Add</string>
-    <string name="rightbtn_key">Sub</string>
+    <string name="leftbtn_key">Magic!!!</string>
     <string name="leftboxtext">"Counter: "</string>
     <string name="cupcake_ipsum_medium">Cupcake ipsum dolor sit amet chocolate cake cake I love topping. Gummi bears cotton candy tiramisu sweet roll candy dragée. Muffin I love dessert croissant. I love halvah jelly-o sugar plum bonbon chupa chups candy. Marzipan gingerbread croissant tootsie roll I love. I love cotton candy pudding. Powder gingerbread bonbon I love I love soufflé. Cupcake cupcake biscuit powder lollipop biscuit fruitcake.</string>
     <string name="firstlinetext">first line</string>
     <string name="secondlinetext">second line (longer)</string>
     <string name="thirdlinetext">third line (even longer)</string>
     <string name="imagedescription">CLA AMG 45s</string>
+    <string name="greetingHint">Enter greetings</string>
+    <string name="mailHint">Enter fancy text</string>
 </resources>
