--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Exercise01</string>
-    <string name="leftbtn_key">Add</string>
-    <string name="rightbtn_key">Sub</string>
-    <string name="leftboxtext">"Counter: "</string>
+    <string name="app_name">Exercise03</string>
     <string name="cupcake_ipsum_medium">Cupcake ipsum dolor sit amet chocolate cake cake I love topping. Gummi bears cotton candy tiramisu sweet roll candy dragée. Muffin I love dessert croissant. I love halvah jelly-o sugar plum bonbon chupa chups candy. Marzipan gingerbread croissant tootsie roll I love. I love cotton candy pudding. Powder gingerbread bonbon I love I love soufflé. Cupcake cupcake biscuit powder lollipop biscuit fruitcake.</string>
-    <string name="firstlinetext">first line</string>
-    <string name="secondlinetext">second line (longer)</string>
-    <string name="thirdlinetext">third line (even longer)</string>
-    <string name="imagedescription">CLA AMG 45s</string>
+    <string name="imagedescription">fancy image</string>
+    <string name="nameHint">Enter name</string>
+    <string name="addElement">Add Element</string>
+    <string name="toastBtnName">Toast!</string>
+    <string name="date_toast">Hello, %1$s! Your lucky number is %2$d </string>
 </resources>
