--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name" translatable="false">MovieDB</string>
+    <string name="app_name" translatable="false">RandomUser</string>
     <string name="cupcake_ipsum_medium">Cupcake ipsum dolor sit amet chocolate cake cake I love topping. Gummi bears cotton candy tiramisu sweet roll candy dragée. Muffin I love dessert croissant. I love halvah jelly-o sugar plum bonbon chupa chups candy. Marzipan gingerbread croissant tootsie roll I love. I love cotton candy pudding. Powder gingerbread bonbon I love I love soufflé. Cupcake cupcake biscuit powder lollipop biscuit fruitcake.</string>
     <string name="imagedescription">Tolles Bild</string>
     <string name="date_toast">Hallo, %1$s! Deine Glückszahl lautet %2$d</string>
@@ -10,4 +10,9 @@
     <string name="loginText">Letzter Login: %s</string>
     <string name="randomNumberText">Würfeln!</string>
     <string name="randomToast">Du hast eine %d gewürfelt!</string>
+    <string name="wentWrongMessage">Etwas ist schief gelaufen. Überprüfe deine Internetverbindung oder versuche es später erneut.</string>
+    <string name="reloadRandomUserBtnText">Neuer Random User</string>
+    <string name="wentWrongAndIAmNotResponsible">WIR SIND UNSCHULDIG!!!! Die Api hat ne Macke</string>
+    <string name="notThatFastText">Immer ruhig... Die Anfrage läuft noch!</string>
+    <string name="maleOnlyBtnText">Neuer weiblicher User</string>
 </resources>
